final styling to forms

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -23,6 +23,10 @@ $general: #C2CBD4;
 $navbar-dark-active-color: $active;
 $selection-color: #d9edf7;
 
+$form-border-radius: 4px;
+$form-input-padding: 0.555555556rem;
+$form-red: #721c24;
+
 
 // Breakpoints
 $grid-breakpoints: (
