updated btn-light styling && removed hover-animation for Latest Blog & Learn More Block

--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -62,6 +62,12 @@ button, .btn {
 .btn-light {
     background-color: #fff;
     color: $headings-color;
+    &:link,
+    &:visited,
+    &:hover,
+    &:active {
+        color: $headings-color;
+    }
 }
 
 .btn-light-flex {
