updated footer T&C and removed self attr on PingPong

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -89,3 +89,12 @@ p {
 ol, ul {
     margin-bottom: $spacer;
 }
+
+a.color-inherit {
+    &:link,
+    &:visited,
+    &:hover,
+    &:active {
+        color: inherit;
+    }
+}
