--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -855,3 +855,15 @@ body #gform_wrapper_1 .gfield_error textarea {
     border: 1px solid $form-red !important;
     background-color: rgba(#f8d7da,.35);
 }
+
+//captcha mobile fix
+@media (max-width: 361.98px) {
+    #gform_wrapper_1 div.ginput_recaptcha {
+        -ms-transform: scale(.8);
+        transform: scale(.8);
+        -webkit-transform: scale(.8);
+        -ms-transform-origin: 0 0;
+        transform-origin: 0 0;
+        -webkit-transform-origin: 0 0
+    }
+}
