added class to teampong & reduced img-size

--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -421,6 +421,12 @@ article {
     }
 }
 
+.team-img__mxw {
+    @include media-breakpoint-up(xxl) {
+        max-width: 440px;
+    }
+}
+
 
 // cards slider decorative
 
